# beautiful-ternary

./: LICENSE  README.md  pyproject.toml
src/ternary/: __init__.py
tests/: test_ternary.py
